# shared/api/gateway/v1/gateway.openapi.yaml
@@ -31,6 +31,8 @@ paths:
       operationId: BoardCreate
       tags:
         - Board
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: "Доска успешно создана"
@@ -61,6 +63,8 @@ paths:
       operationId: BoardGetAll
       tags:
         - Board
+      security:
+        - bearerAuth: [ ]
       responses:
         '200':
           description: "Успешное получение досок"
@@ -93,6 +97,8 @@ paths:
       operationId: BoardGet
       tags:
         - Board
+      security:
+        - bearerAuth: [ ]
       responses:
         '200':
           description: "Успешное получение доски"
@@ -137,6 +143,8 @@ paths:
       operationId: ColumnCreate
       tags:
         - Column
+      security:
+        - bearerAuth: [ ]
       responses:
         '200':
           description: "Колонка успешно создана"
@@ -181,6 +189,8 @@ paths:
       operationId: ColumnDelete
       tags:
         - Column
+      security:
+        - bearerAuth: [ ]
       responses:
         '204':
           description: "Колонка успешно удалена"
@@ -227,6 +237,8 @@ paths:
               $ref: "#/components/schemas/ColumnUpdatePositionRequestBody"
       tags:
         - Column
+      security:
+        - bearerAuth: [ ]
       responses:
         '204':
           description: "Позиция колонки успешно изменена"
@@ -273,6 +285,8 @@ paths:
               $ref: "#/components/schemas/TaskCreateRequestBody"
       tags:
         - Task
+      security:
+        - bearerAuth: [ ]
       responses:
         '200':
           description: "Задача успешно создана"
@@ -323,6 +337,8 @@ paths:
       operationId: TaskDelete
       tags:
         - Task
+      security:
+        - bearerAuth: [ ]
       responses:
         '204':
           description: "Задача успешно удалена"
@@ -375,6 +391,8 @@ paths:
               $ref: "#/components/schemas/TaskUpdatePositionRequestBody"
       tags:
         - Task
+      security:
+        - bearerAuth: [ ]
       responses:
         '204':
           description: "Позиция задачи успешно изменена"
@@ -467,6 +485,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericError"
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     CreateBoardRequestBody:
       type: object
